Update transitions on home page

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,22 +8,22 @@
     <meta name="keywords" content="design, responsive, web, web design, typography, portfolio, education, design education"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="css/style.css?v=3.1"/>
+    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.11"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
       window.jsVersion   = 2.2;
-      window.assets      = "";
+      window.assets      = "http://nkwalton.brighamyounguniv.netdna-cdn.com/";
     </script>
-    <script src="js/init.min.js?v=2.2"></script>
+    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2.2"></script>
   </head>
   <body class="work">
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
-      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
         <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
@@ -79,7 +79,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="sg_home" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/sg_home.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/sg_home.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -111,7 +111,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="sg_tombstone" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/sg_tombstone.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/sg_tombstone.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -133,7 +133,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="sg_media" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/sg_media.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/sg_media.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -184,7 +184,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byu-home" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/byu-home.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/byu-home.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -223,7 +223,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byu_home-sizes" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/byu_home-sizes.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/byu_home-sizes.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -254,7 +254,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byu_style" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/byu_style.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/byu_style.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -297,7 +297,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byutickets_full" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/byutickets_full.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/byutickets_full.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -334,7 +334,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byutickets-sizes2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/byutickets-sizes2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/byutickets-sizes2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -377,7 +377,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ls-scores" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/ls-scores.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/ls-scores.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -409,7 +409,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ls-grader-exam" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/ls-grader-exam.png"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/ls-grader-exam.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -440,7 +440,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ls-grader" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/ls-grader.png"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/ls-grader.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -487,7 +487,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_cards" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_cards.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/thesis_cards.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -512,7 +512,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_brochure" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_brochure.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/thesis_brochure.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -537,7 +537,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis-all" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis-all.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/thesis-all.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -556,7 +556,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_society" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_society.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/thesis_society.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -585,7 +585,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_doves" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_doves.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/thesis_doves.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -616,7 +616,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_cases" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_cases.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/thesis_cases.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -652,7 +652,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="bugs-zoom1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs-zoom1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/bugs-zoom1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -668,7 +668,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="bugs_typographic" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs_typographic.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/bugs_typographic.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -684,7 +684,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="bugs-all" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/bugs-all.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/bugs-all.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -716,7 +716,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="love1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/love1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/love1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -732,7 +732,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="love2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/love2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/love2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -748,7 +748,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="love" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/love.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/love.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -784,7 +784,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_pray" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_pray.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/jonah_pray.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -800,7 +800,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_beach3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_beach3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/jonah_beach3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -816,7 +816,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_colophon" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_colophon.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/jonah_colophon.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -849,7 +849,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_case2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_case2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/jonah_case2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -881,7 +881,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="hardwork" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/hardwork.png"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/hardwork.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -901,7 +901,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="modernism" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/modernism.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/modernism.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -935,7 +935,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="suu-poster" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/suu-poster.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/suu-poster.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -965,7 +965,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ornate_abuse_close" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/ornate_abuse_close.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/ornate_abuse_close.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -1010,7 +1010,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="hatch" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/hatch.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/hatch.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
