--- a/students.html
+++ b/students.html
@@ -8,22 +8,22 @@
     <meta name="keywords" content="design, responsive, web, web design, typography, portfolio, education, design education"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="css/style.css?v=3.1"/>
+    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.11"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
       window.jsVersion   = 2.2;
-      window.assets      = "";
+      window.assets      = "http://nkwalton.brighamyounguniv.netdna-cdn.com/";
     </script>
-    <script src="js/init.min.js?v=2.2"></script>
+    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2.2"></script>
   </head>
   <body class="teaching">
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
-      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
         <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
@@ -69,7 +69,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -89,7 +89,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -109,7 +109,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -129,7 +129,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -149,7 +149,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -169,7 +169,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster7.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -189,7 +189,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -209,7 +209,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster8.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -229,7 +229,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/poster9.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -265,7 +265,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -285,7 +285,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -305,7 +305,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -325,7 +325,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -345,7 +345,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -365,7 +365,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -385,7 +385,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd7.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -405,7 +405,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd8.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -425,7 +425,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/cd9.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -461,7 +461,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -481,7 +481,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -501,7 +501,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -521,7 +521,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -541,7 +541,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -561,7 +561,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/album6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -597,7 +597,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -617,7 +617,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -637,7 +637,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -657,7 +657,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/student/photoshop3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
