Implement new <picture> element
Added picture element with sizing and dpi capabilities on home page and
portfolio main pages.
http://dev.opera.com/articles/responsive-images/

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <meta name="keywords" content="design, responsive, web, web design, typography, portfolio, education, design education"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.11"/>
+    <link rel="stylesheet" href="css/style.css?v=3.11"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
-      window.jsVersion   = 2.2;
-      window.assets      = "http://nkwalton.brighamyounguniv.netdna-cdn.com/";
+      window.jsVersion   = 2.3;
+      window.assets      = "";
     </script>
-    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2.2"></script>
+    <script src="js/init.min.js?v=2.3"></script>
   </head>
   <body class="home">
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
-      <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a>
         <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
@@ -32,9 +32,21 @@
       <div class="byline">Edward Tufte</div>
     </div>
     <div class="content">
-      <div class="wrapper"><a href="/portfolio" class="heading">Portfolio</a><a href="/portfolio#gifts" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#byu" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span><img data-src="byu-home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#thesis" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Connections</span></span><img data-src="thesis_cards.jpg" alt="" class="lazy front"/></a><a href="/portfolio" class="viewall next"><span class="link visuallyhidden">View all</span></a>
+      <div class="wrapper"><a href="/portfolio.html" class="heading">Portfolio</a><a href="/portfolio.html#gifts" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span>
+          <picture><img src="img/400w/sg_home.jpg" sizes="(min-width:600px) 25vw, (min-width:400px) 36vw, 57vw" srcset="img/400w/sg_home.jpg 400w, img/800w/sg_home.jpg 800w, img/1600w/sg_home.jpg 1600w" alt="Sacred Gifts"/>
+          </picture></a><a href="/portfolio.html#byu" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span>
+          <picture><img src="img/400w/byu-home.jpg" sizes="(min-width:600px) 25vw, (min-width:400px) 36vw, 57vw" srcset="img/400w/byu-home.jpg 400w, img/800w/byu-home.jpg 800w, img/1600w/byu-home.jpg 1600w" alt="BYU Web"/>
+          </picture></a><a href="/portfolio.html#thesis" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Connections</span></span>
+          <picture><img src="img/400w/thesis_cards.jpg" sizes="(min-width:600px) 25vw, (min-width:400px) 36vw, 57vw" srcset="img/400w/thesis_cards.jpg 400w, img/800w/thesis_cards.jpg 800w, img/1600w/thesis_cards.jpg 1600w" alt="Connections"/>
+          </picture></a><a href="/portfolio.html" class="viewall next"><span class="link visuallyhidden">View all</span></a>
       </div>
-      <div class="wrapper"><a href="/students" class="heading">Student Work</a><a href="/students#poster" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Poster</span></span><img data-src="student/poster1.jpg" alt="" class="lazy front"/></a><a href="/students#album" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">Album</span></span><img data-src="student/album1.jpg" alt="" class="lazy front"/></a><a href="/students#photoshop" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3.jpg" alt="" class="lazy front"/></a><a href="/students" class="viewall next"><span class="link visuallyhidden">View all</span></a>
+      <div class="wrapper"><a href="/students.html" class="heading">Student Work</a><a href="/students.html#poster" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Poster</span></span>
+          <picture><img src="img/400w/student/poster1.jpg" sizes="(min-width:600px) 25vw, (min-width:400px) 36vw, 57vw" srcset="img/400w/student/poster1.jpg 400w, img/800w/student/poster1.jpg 800w, img/1600w/student/poster1.jpg 1600w" alt="Poster"/>
+          </picture></a><a href="/students.html#album" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">Album</span></span>
+          <picture><img src="img/400w/student/album1.jpg" sizes="(min-width:600px) 25vw, (min-width:400px) 36vw, 57vw" srcset="img/400w/student/album1.jpg 400w, img/800w/student/album1.jpg 800w, img/1600w/student/album1.jpg 1600w" alt="Album"/>
+          </picture></a><a href="/students.html#photoshop" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span>
+          <picture><img src="img/400w/student/photoshop3.jpg" sizes="(min-width:600px) 25vw, (min-width:400px) 36vw, 57vw" srcset="img/400w/student/photoshop3.jpg 400w, img/800w/student/photoshop3.jpg 800w, img/1600w/student/photoshop3.jpg 1600w" alt="Photoshop"/>
+          </picture></a><a href="/students.html" class="viewall next"><span class="link visuallyhidden">View all</span></a>
       </div>
     </div>
     <footer class="main"></footer>
